--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/link": "2.2.14",
     "@heroui/listbox": "2.3.16",
     "@heroui/navbar": "2.2.15",
+    "@heroui/select": "^2.4.17",
     "@heroui/skeleton": "^2.2.10",
     "@heroui/snippet": "2.2.18",
     "@heroui/switch": "2.2.15",
